--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>test</title>
+    <title>Paint App</title>
 </head>
 <body>
     
@@ -52,6 +52,8 @@
     <button id = "erase_button" type = "button"> ERASE </button>
 
     <button id = "resize_button" type = "button" onclick = "resizePopup()"> RESIZE </button>
+
+    <input type = "file" id = "load_file" accept = "image/*">
 
     <script>
         //Fix this
