--- a/index.html
+++ b/index.html
@@ -11,16 +11,13 @@
 
     <canvas
         class = "canvasStyle"
-        id = "CV" 
-        onmousedown = "mouseHandler(event)"
-        onmouseup = "mouseHandler(event)"
-        onmousemove = "mouseHandler(event)"
-        onwheel = "mouseHandler(event)"
+        id = "glCanvas" 
         width = "640" 
         height = "640" 
         style = "border:1px solid #000000;">
     </canvas>
 
+    <!--
     <canvas
         id = "selectedColorCanvas"
         width = "32"
@@ -77,6 +74,8 @@
     <p id = "mousePos"></p>
     <p id = "mouseEventName"> </p>
     <p id = "test"> </p>
+
+    -->
 
     <script src = "app.js"> </script>
 </body>
