--- a/index.html
+++ b/index.html
@@ -58,13 +58,14 @@
     <canvas id="selectedColorCanvas" width="32" height="32" style="border:1px solid #000000;">
     </canvas>
 
-
+    <!-- Eventually do this automatically-->
     <script src="./object_classes.js"> </script>
     <script src="./vec3.js"> </script>
     <script src="./quat.js"> </script>
     <script src="./m4.js"> </script>
     <script src="./geometryCreator.js"> </script>
     <script src="./cursorFunctions.js"> </script>
+    <script src = "./glState.js"> </script>
     <script src="app.js"> </script>
 
 </body>
