Raytracer class and camera cleanup
-

--- a/index.html
+++ b/index.html
@@ -69,6 +69,7 @@
     <script src="./glState.js"> </script>
     <script src="./AccelerationStructure.js"> </script>
     <script src = "./DataArrays.js"></script>
+    <script src = "./Raytracer.js"></script>
     <script src="app.js"> </script>
 
 </body>
