Messy performance boost
Did some work on the BFS use of queues and arrays to improve performance

--- a/index.html
+++ b/index.html
@@ -57,6 +57,8 @@
     </div>
 
     <!-- Eventually do this automatically-->
+    <!-- Also this needs to be ordered correctly, so not good do something else-->
+    <script src="./FixedLengthStructures.js"></script>
     <script src="./object_classes.js"> </script>
     <script src="./vec3.js"> </script>
     <script src="./quat.js"> </script>
@@ -68,6 +70,7 @@
     <script src="./Raytracer.js"></script>
     <script src="app.js"> </script>
     <script src="UISelectionGrid.js"></script>
+    
 
     <!-- ... other HTML ... -->
 
