Link to unfinished app

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 
 
 
-        <a class='project-square'>
+        <a class='project-square' href = 'https://npportfolio.github.io/Blockchain' target = '_blank'>
             <h3>Unfinished Blockchain App</h3>
         </a>
 
