--- a/index.html
+++ b/index.html
@@ -46,10 +46,9 @@
             <img src='sculpt_thumbnail.png'></img>
         </a>
 
-
-
         <a class='project-square' href = 'https://npportfolio.github.io/Blockchain' target = '_blank'>
-            <h3>Unfinished Blockchain App</h3>
+            <h3>Unfinished Cryptocurrency</h3>
+            <img src = 'blockchain_thumbnail.png'></img>
         </a>
 
         <a class='project-square'>
