Set up freelance account today
green square

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         </a>
 
         <a class='project-square'>
-            <h3>...</h3>
+            <h3>TFGAN Landscape Generator</h3>
         </a>
 
         <a class='project-square'>
